--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.16.3)
 project(C___project)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(C___project main.cpp Matrix.cpp)
+add_executable(C___project Matrix.cpp)
