update test class add MyInt class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(C___project)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(C___project Matrix.cpp MatrixException.cpp Matrix.h)
+add_executable(C___project Matrix.cpp MatrixException.cpp Matrix.h MyInt.cpp MyInt.h)
 
 #find_package(GTest REQUIRED)
 #include_directories(${GTEST_INCLUDE_DIRS})
@@ -12,7 +12,7 @@ enable_testing()
 add_executable(
         matrix_test
         matrix_test.cpp
-)
+        MyInt.cpp MyInt.h)
 target_link_libraries(
         matrix_test
         gtest
