--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(C___project Matrix.cpp MatrixException.cpp Matrix.h MyInt.cpp MyInt.h)
+add_executable(C___project MatrixException.cpp Matrix.h MyInt.cpp MyInt.h)
 
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
 
